[tool.poetry]
name = "drumpy"
version = "0.1.0"
description = ""
authors = ["Maurice Van Wassenhove <mauricevanwassenhove@fastmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "1.26.4"
pygame = "2.5.2"
mediapipe = "0.10.11"
opencv-python = "4.9.0.80"
termcolor = "2.4.0"
pygame-gui = "0.6.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.2"
deptry = "0.15.0"
nuitka = "2.1.3"
