[tool.poetry]
name = "drumpy"
version = "1.0.1"
description = ""
authors = ["Maurice Van Wassenhove <mauricevanwassenhove@fastmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "1.26.4"
mediapipe = "0.10.14"
opencv-python = "4.10.0.84"
termcolor = "2.4.0"
pygame-gui = "0.6.10"
pygame-ce = "^2.4.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"
deptry = "0.16.1"
nuitka = "2.2.3"
ruff-lsp = "^0.0.53"
ruff = "^0.4.0"
pyright = "^1.1.358"

[tool.ruff.lint]
select = ["E", "F", "N", "FBT", "B", "A", "C4", "PIE", "Q", "RET", "SLF", "SIM", "ARG", "PL", "PERF", "RUF"]
fixable = ["ALL"]
pylint.max-args = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.pyright]
include = ["drumpy"]
typeCheckingMode = "strict"
exclude = ["**/*mediapipe_pose.py", "**/*cli.py", "**/*process_result.py"]
